# axum-sqlx-sqlite_v1

./: .env.example  .gitignore  Cargo.toml  sqlite.db  sqlite.db-shm  sqlite.db-wal
data/: products.json
migrations/: 20250212065846_create_products_table.sql
src/: lib.rs  main.rs  seed.rs
src/api/: router.rs
src/core/: db.rs  mod.rs
src/modules/product/: dto.rs  mod.rs  model.rs  repository.rs  route.rs  service.rs
