[package]
name = "axum-sqlx-sqlite_v1"
version = "0.1.0"
edition = "2021"
default-run = "axum-sqlx-sqlite_v1"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
axum = { version = "0.8.1", features = ["tokio"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
hyper = { version = "1.6.0", features = ["full"] }
include_dir = "0.7.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["sqlite", "migrate", "runtime-tokio-rustls", "uuid", "chrono"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.13.1", features = ["v4", "v7", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
